IDE: ensure the horizontal size of the editor is the one that is actually visible.
Closes https://github.com/BelaPlatform/Bela-private/issues/256.
Also, as the vertical scrollbar is expected to be always hidden
(https://github.com/BelaPlatform/Bela-private/issues/217), at least we
make this clear in the comments. Arguably a better fix would be to show
it only on hover or scroll.
At the same time, do better for the transition so that the horizontal
scrollbar resizes smoothly (fixup for 7ee305a5bd2399df04ac6afd7818be3977636a1d).

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -771,10 +771,13 @@ select.dropdown-num {
   overflow: auto;
   position: absolute;
   top: 28px;
-  width: 100vw;
+  width: calc(100vw - 38px);
   z-index: 97; }
   #editor.active {
     display: block; }
+  #editor.tabs-changing {
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out; }
   #editor .ace_search.right {
     right: 60px;
     -webkit-transition: 0.5s ease-in-out;
@@ -782,7 +785,7 @@ select.dropdown-num {
   #editor .ace_search.active {
     right: 448px; }
   #editor.tabs-open {
-    width: calc(100vw - 390px); }
+    width: calc(100vw - 426px); }
 
 #audio-parent,
 #img-display-parent {
